[tool.poetry]
name = "library"
version = "0.1.0"
description = ""
authors = ["AlennikovPavel <palennikov@softwarecom.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
peewee = "^3.15.4"
pymysql = "^1.0.2"
fpdf = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
